tdf#112368 Qt5 handle owned, non-LO clipboard content

LO can actually create clipboard content, which is not backed by
an XTransferable, for example when copying / selecting the text
of the file name in the QFileDialog. So the ownership check in
Qt5Clipboard::handleChanged is wrong and we just have to prevent
freeing the content in handleChanged while changing the handle
from Qt5Clipboard::setContents.

This patch simply sets a boolean member, while the QClipboard is
changed by LO, to handle this case.

Change-Id: Icc41c32c1f9807e7adff7a9ae16a6c6cacc83f1b